Ticket #14595 (closed defect: fixed)

Opened 10 months ago

Last modified 9 months ago

Console application: Log messages from worker threads aren't displayed

Reported by: roed_bis Owned by:
Priority: low Milestone:
Component: base Version: 2.9.4
Keywords: console wxLog mt Cc:
Blocked By: Patch: no
Blocking:

Description

In GUI applications log messages from from worker threads are queued and displayed at idle time but in console application there's no message loop so queue will never be flushed.

Maybe this is not a bug but at minimum documentation needs clarification.
A simple workaround is to create separate log object in a worker thread:

wxLogStderr log;
wxLog::SetThreadActiveTarget( &log );

I don't know is there an elegant way to distinguish between console and GUI application at runtime. Maybe application traits? HasStderr or CanUseStderr function?

Change History

follow-up: ↓ 2   Changed 10 months ago by vadz

  • keywords wxLog mt added
  • priority changed from lowest to low
  • status changed from new to confirmed

We should flush all threads logs on application exit. It's probably not ideal but just losing them is even worse...

Could you please check whether adding wxLog::FlushActive() to wxAppConsoleBase::OnExit() does this?

in reply to: ↑ 1   Changed 10 months ago by roed_bis

Checked. wxLog::FlushActive works in OnExit but this is far from good solution.

follow-up: ↓ 4   Changed 10 months ago by vadz

I wanted to add this but realized that we already had a call to wxLog::SetActiveTarget(NULL) which is supposed to take care of this in wxEntryCleanup(), called from wxUninitialize(). Do you call this function from your code? If so, I'd really like to have a small sample reproducing the problem.

As for a better solution, the only one I see is to add wxLog::IsMTSafe() method which would return false by default but could return true for e.g. wxLogStderr (assuming we can be sure it's really MT-safe on all platforms!). Then we could use the logger directly from background threads if this method returned true. But in practice, it's not that different from simply setting this logger as per-thread logger.

in reply to: ↑ 3   Changed 10 months ago by roed_bis

wxLog::SetActiveTarget(NULL) is called from wxUninitialize() but this function doesn't display queued logs. It only call Flush on active log target. And:

void wxLog::Flush()
{
    LogLastRepeatIfNeeded();
}

Queued logs are displayed at wxLog::FlushThreadMessages method. This method is called only from wxLog::FlushActive. wxLog::SetActiveTarget(NULL) do not call wxLog::FlushThreadMessages nor wxLog::FlushActive.

  Changed 9 months ago by VZ

  • status changed from confirmed to closed
  • resolution set to fixed

(In [72629]) Flush log messages from other threads on shutdown too.

Add a call to wxLog::FlushActive() to the shutdown code as calling just
wxLog::SetActiveTarget(NULL) is not enough, it flushes the current log target
only but not the ones used by other threads.

Closes #14595.

Note: See TracTickets for help on using tickets.